removed nojs page. Instead added conditions to ensure all content is visible without js. Added noscript menu.

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -8,7 +8,7 @@
   font-weight: 400;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/inconsolata-400.woff2) format('woff2');
+  src: url(../../fonts/inconsolata-400.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
@@ -17,7 +17,7 @@
   font-weight: 500;
   font-stretch: 100%;
   font-display: swap;
-  src: url(../fonts/inconsolata-500.woff2) format('woff2');
+  src: url(../../fonts/inconsolata-500.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
@@ -25,7 +25,7 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url(../fonts/poppins-500.woff2) format('woff2');
+  src: url(../../fonts/poppins-500.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
@@ -33,7 +33,7 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url(../fonts/poppins-600.woff2) format('woff2');
+  src: url(../../fonts/poppins-600.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
@@ -41,7 +41,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url(../fonts/poppins-700.woff2) format('woff2');
+  src: url(../../fonts/poppins-700.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
@@ -49,7 +49,7 @@
   font-style: normal;
   font-weight: 800;
   font-display: swap;
-  src: url(../fonts/poppins-800.woff2) format('woff2');
+  src: url(../../fonts/poppins-800.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
@@ -57,7 +57,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(../fonts/source-sans-3-400.woff2) format('woff2');
+  src: url(../../fonts/source-sans-3-400.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
@@ -65,7 +65,7 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url(../fonts/source-sans-3-600.woff2) format('woff2');
+  src: url(../../fonts/source-sans-3-600.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
@@ -73,7 +73,7 @@
   font-style: normal;
   font-weight: 800;
   font-display: swap;
-  src: url(../fonts/source-sans-3-800.woff2) format('woff2');
+  src: url(../../fonts/source-sans-3-800.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
@@ -81,12 +81,12 @@
   font-style: normal;
   font-weight: 100 900;
   font-display: swap;
-  src: url(../fonts/urbanist-100-900.woff2) format('woff2');
+  src: url(../../fonts/urbanist-100-900.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
   font-family: 'FontAwesomeSolid';
-  src: url('../fonts/fa-solid-900.woff2') format('woff2');
+  src: url('../../fonts/fa-solid-900.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -148,7 +148,7 @@ padding-left: 5px;
 .fa,.fa-regular,.fa-solid,.fa-brands {
 font-family:"Font Awesome 6 Free"
 }
-.svg-inline--fa {
+html .svg-inline--fa {
 vertical-align:middle
 }
 .button {
